// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedList clear() should delete the entire list 1`] = `
LinkedList {
  "head": null,
  "length": 0,
}
`;

exports[`LinkedList remove() should remove an element at a specified index other than 0 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "One",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should remove and return an element at a specified index other than 0 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "One",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should remove the first element if desired 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "Two",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should remove the first element if the index is 0 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "Two",
  },
  "length": 3,
}
`;

exports[`LinkedList should allow initialization of a linked list by chaining append methods  1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": Node {
          "next": null,
          "value": "Four",
        },
        "value": "Three",
      },
      "value": "Two",
    },
    "value": "One",
  },
  "length": 4,
}
`;
